Dark mode placeholder fix

--- a/packages/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
+++ b/packages/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
@@ -191,6 +191,13 @@
             left: 0;
         }
 
+        @media (prefers-color-scheme: dark) {
+            &::before {
+                background: var(--color-white-at-6);
+            }
+        }
+
+
         p {
             width: 100%;
 
